objects/RecordType__x.object
<CustomObject>
    <fields>
        <fullName>BusinessProcessId__c</fullName>
        <externalDeveloperName>BusinessProcessId</externalDeveloperName>
        <label>Business Process ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeveloperName__c</fullName>
        <externalDeveloperName>DeveloperName</externalDeveloperName>
        <label>Record Type Name</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsActive</externalDeveloperName>
        <label>Active</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NamespacePrefix__c</fullName>
        <externalDeveloperName>NamespacePrefix</externalDeveloperName>
        <label>Namespace Prefix</label>
        <length>15</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SobjectType__c</fullName>
        <externalDeveloperName>SobjectType</externalDeveloperName>
        <label>Sobject Type Name</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Account_Team_Member__c</fullName>
                </value>
                <value>
                    <fullName>AccountBrand</fullName>
                </value>
                <value>
                    <fullName>AccountIndicatorMapping__c</fullName>
                </value>
                <value>
                    <fullName>AccountMargin__c</fullName>
                </value>
                <value>
                    <fullName>AccSalesPerfAdoption__c</fullName>
                </value>
                <value>
                    <fullName>ActivityType__c</fullName>
                </value>
                <value>
                    <fullName>Additional_account__c</fullName>
                </value>
                <value>
                    <fullName>Additional_Service_Appointment__c</fullName>
                </value>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>AER__c</fullName>
                </value>
                <value>
                    <fullName>Announcement</fullName>
                </value>
                <value>
                    <fullName>AppAnalyticsQueryRequest</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>AssetAuditTrail__c</fullName>
                </value>
                <value>
                    <fullName>AssetCharacteristic__c</fullName>
                </value>
                <value>
                    <fullName>AssetContract__c</fullName>
                </value>
                <value>
                    <fullName>AssetPartnerFunction__c</fullName>
                </value>
                <value>
                    <fullName>AssetRelationship</fullName>
                </value>
                <value>
                    <fullName>AssistantProgress</fullName>
                </value>
                <value>
                    <fullName>AssociatedLocation</fullName>
                </value>
                <value>
                    <fullName>AuthorizationForm</fullName>
                </value>
                <value>
                    <fullName>AuthorizationFormConsent</fullName>
                </value>
                <value>
                    <fullName>AuthorizationFormDataUse</fullName>
                </value>
                <value>
                    <fullName>AuthorizationFormText</fullName>
                </value>
                <value>
                    <fullName>Calendar2</fullName>
                </value>
                <value>
                    <fullName>Calendar2Definition</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>CampaignMember</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <externalDataSource>BMX_EXTERNAL</externalDataSource>
    <externalName>RecordType</externalName>
    <label>Record Type</label>
    <pluralLabel>Record Types</pluralLabel>
</CustomObject>